--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 color-eyre = "0.6.3"
 libhelium = "0.2.0"
 relm4 = "0.8.1"
-totp-rs = { version = "5.5.1", features = ["otpauth"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+maz-auth = { path = "../auth", version = "0.1.0" }
+homedir = "0.2.1"
+lazy_static = "1.4.0"
