--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -14,3 +14,5 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 maz-auth = { path = "../auth", version = "0.1.0" }
 homedir = "0.2.1"
 lazy_static = "1.4.0"
+cocoon = "0.4.1"
+keyring = "2.3.3"
